--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Sorting Cards using the selection algorithm</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -13,17 +13,18 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+    <div id="inputs">
+      <label for="original">Original: </label>
+      <!-- input -->
+      <input id="Letters" name="Letters" type="text" />
+      <button id="Draw" class="button">Draw</button>
+      <button id="Sort" class="button">Sort</button>
     </div>
+    <div id="cardDeck"></div>
+
+    <label id="bubbleLabel" for="bubbleSort">Selec Sort Log: </label>
+    <div id="sortDeck"></div>
+
+    <script src="./main.js"></script>
   </body>
 </html>
